--- a/manuscript/sources/installed-r-packages.bib
+++ b/manuscript/sources/installed-r-packages.bib
@@ -102,3 +102,20 @@
   note = {R package version 4.2},
   url = {https://CRAN.R-project.org/package=curl},
 }
+
+@Manual{rgbif1,
+  title = {rgbif: Interface to the Global Biodiversity Information Facility API},
+  author = {Scott Chamberlain and Vijay Barve and Dan Mcglinn and Damiano Oldoni and Peter Desmet and Laurens Geffert and Karthik Ram},
+  year = {2019},
+  note = {R package version 1.3.0},
+  url = {https://CRAN.R-project.org/package=rgbif},
+}
+
+@Article{rgbif2,
+  title = {R Python, and Ruby clients for GBIF species occurrence data},
+  author = {Scott Chamberlain and Carl Boettiger},
+  journal = {PeerJ PrePrints},
+  year = {2017},
+  publisher = {PeerJ, Inc.},
+  url = {https://doi.org/10.7287/peerj.preprints.3304v1},
+}
