--- a/manuscript/sources/installed-r-packages.bib
+++ b/manuscript/sources/installed-r-packages.bib
@@ -119,3 +119,19 @@
   publisher = {PeerJ, Inc.},
   url = {https://doi.org/10.7287/peerj.preprints.3304v1},
 }
+
+@Manual{tidyr,
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2019},
+  note = {R package version 1.0.0},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
+@Manual{dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2019},
+  note = {R package version 0.8.3},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
