--- a/main-script.Rmd
+++ b/main-script.Rmd
@@ -68,7 +68,16 @@ ipak(packages_list <- c(
                        "curl",
                        "rgbif",
                        "tidyr",
-                       "dplyr"
+                       "dplyr",
+                       "tidylog",
+                        "fs",
+                        "vroom",
+                        "here",
+                        "CoordinateCleaner",
+                        "future",
+                        "furrr",
+                        "parallel",
+                        "doParallel"
                        )
      )
 
@@ -137,30 +146,33 @@ if(file.exists("data/data.Rdata")){
   amp_dp <- dplyr::inner_join(read.csv("data/raw/ATLANTIC_AMPHIBIANS_sites.csv"),
                   read.csv("data/raw/ATLANTIC_AMPHIBIANS_species.csv"), by = "id")
   
+  ## Mammals
   # Bats
   bat_capture <- read.csv("data/raw/ATLANTIC_BATS_Capture.csv") # read data with species names
   cols <- strsplit(colnames(bat_capture), "[.]|[,]", fixed = FALSE) # creat column names vector to use on `separate`
   cols <-  cols[[1]][! cols[[1]] %in% ""]
-  
   bat_capture <- tidyr::separate(bat_capture, 1, cols, sep = "[,]", remove = TRUE) # separate data in proper columns
-  
   bat_sites <-  read.csv("data/raw/ATLANTIC_BATS_Study_site.csv") # read data with coordinates
   
   bat_dp <- dplyr::inner_join(bat_capture, bat_sites, by = "ID") # merge
   
   rm(cols, bat_capture, bat_sites)
   
-  
   # Small Mammals
   mamsmall_dp <- dplyr::inner_join(read.csv("data/raw/ATLANTIC_SM_Study_Site.csv"),
                   read.csv("data/raw/ATLANTIC_SM_Capture.csv"), by = "ID.")
   
   # Camtraps Mammals
-  mamct_dp <- dplyr::inner_join(read.csv("data/raw/ATLANTIC_SM_Study_Site.csv"),
-                  read.csv("data/raw/ATLANTIC_SM_Capture.csv"), by = "ID.")
+  loc <- read.csv("data/raw/ATLANTIC_CAMTRAPS_1-0_LOCATION.csv")
+  survey <- read.csv("data/raw/ATLANTIC_CAMTRAPS_1-0_SURVEY.csv")
+  records <- read.csv("data/raw/ATLANTIC_CAMTRAPS_1-0_RECORDS.csv")
+  sp <- read.csv("data/raw/ATLANTIC_CAMTRAPS_1-0_SPECIES.csv")
   
-  # Birds
-  birds_dp <- read.csv("data/raw/DataS1/DataS1/ATLANTIC_BIRDS_qualitative.csv")
+  mamct_dp <- dplyr::inner_join(loc, survey, by = "location_id")
+  mamct_dp <- dplyr::inner_join(mamct_dp, records, by = "survey_id")
+  mamct_dp <- dplyr::inner_join(mamct_dp, sp, by = "species_id")
+  
+  rm(loc, survey, records, sp)
   
   # Primates
   mamprim_dp <-  read.csv("data/raw/Dataset/ATLANTIC-PR_Occurrence.csv", sep = ";")
@@ -169,14 +181,18 @@ if(file.exists("data/data.Rdata")){
   sites <- read.csv("data/raw/Mammals_UPRB_study_sites.csv")
   sp <- readr::read_csv("data/raw/Mammals_UPRB_species.csv")
   sp <- tidyr::pivot_longer(sp, dplyr::contains("ite_"), names_to = "site", values_to = "abundance", names_prefix = "site_")
-  sp <- filter(sp, sp$abundance != 0)
+  sp <- sp[sp$abundance != 0,]
   mamsmall2_dp <- dplyr::inner_join(sites, sp, by = "site")
   
   rm(sites,sp)
   
+  
+  ## Birds
+  birds_dp <- read.csv("data/raw/DataS1/DataS1/ATLANTIC_BIRDS_qualitative.csv")
+  
   # Data Dryad - for future us
   
-  # iDigBio
+  ## iDigBio
   # download.file("http://s.idigbio.org/idigbio-downloads/48532368-4e8e-4166-90f9-a4ee28002a4b.zip", "data/raw/idigbio.zip")
   # unzip("data/raw/idigbio.zip", exdir = "data/raw")
   idigbio <- read.csv("data/raw/occurrence_raw.csv")
@@ -186,9 +202,75 @@ if(file.exists("data/data.Rdata")){
 
 }
 ```
-```{r Combining all datasets in one}
+```{r subseting datasets}
+## Amphibia
+amp <- amp_dp %>% select(latitude,longitude,species)
+rm(amp_dp)
 
-df_total <- 
+
+## Aves
+ave <- birds_dp %>% select(Latitude_y,Longitude_x,Species)
+colnames(ave) <- c("latitude", "longitude", "species")
+rm(birds_dp)
+
+## Mammals
+subsetting <- function(dataset){
+  select(dataset, contains("lat"), contains("long"), contains("sp"))
+}
+mam <- list(bat_dp,mamprim_dp,mamsmall_dp,mamsmall2_dp)
+for (i in mam){
+  mam <- lapply(mam, subsetting)
+  rm(bat_dp,mamprim_dp,mamsmall_dp,mamsmall2_dp)
+}
+
+# Select only columns for lat, long and species name
+mam[[2]] <- mam[[2]][,1:3]
+mam[[3]] <- mam[[3]][,c(1,2,4)]
+mam[[4]] <- mam[[4]][,c(1,2,4)]
+mam[[5]] <- mamct_dp[,c(7,6,36)]
+rm(mamct_dp)
+
+# Standardazing colnames
+for (i in 1:5) {
+  colnames(mam[[i]]) <- c("latitude", "longitude", "species")
+}
+
+# Merging
+mam <- bind_rows(mam)
+
+## iDigBio
+idigbio <- idigbio %>% 
+    rename(
+      latitude = dwc.decimalLatitude,
+      longitude = dwc.decimalLongitude,
+      class = dwc.class,
+      species = dwc.scientificName
+    ) %>%
+    select(class, species, latitude, longitude) %>%
+    group_by(species) %>%
+    distinct(latitude, longitude, .keep_all = TRUE) %>%
+    ungroup()
+
+
+#TODO  # Split into classes
+  
+
+## GBIF
+# gbif <-
+#   gbif %>% 
+#     rename(
+#       latitude = decimalLatitude,
+#       longitude = decimalLongitude
+#       class = dwc.class,
+#       species = dwc.scientificName
+#     ) %>%
+#     select(class, species, latitude, longitude) %>%
+#     group_by(species) %>%
+#     distinct(latitude, longitude, .keep_all = TRUE) %>%
+#     ungroup()
+# 
+
+
 ```
 
 
