--- a/main-script.Rmd
+++ b/main-script.Rmd
@@ -65,19 +65,20 @@ ipak(packages_list <- c(
                        "captioner", # required; do not exclude from this list
                        "git2r",     # required; do not exclude from this list
                        "googlesheets4",
+                       "CoordinateCleaner",
                        "curl",
+                       "dplyr",
+                       "doParallel",
+                       "fs",
+                       "future",
+                       "furrr",
+                       "here",
                        "rgbif",
                        "tidyr",
-                       "dplyr",
+                       "parallel",
+                       "taxize",
                        "tidylog",
-                        "fs",
-                        "vroom",
-                        "here",
-                        "CoordinateCleaner",
-                        "future",
-                        "furrr",
-                        "parallel",
-                        "doParallel"
+                       "vroom"
                        )
      )
 
@@ -252,22 +253,62 @@ idigbio <- idigbio %>%
     distinct(latitude, longitude, .keep_all = TRUE) %>%
     ungroup()
 
-#TODO  # Split iDigBio into classes
-  # Retrieving class from scientific name
-  library(taxize)
+#TODO  ## Split iDigBio into classes
+# Retrieving class from scientific name
+  #Getting scientific names
   classes <- vector()  
   sp <- vector()
-  for (i in 1:100){#nrow(idigbio)){
+  for (i in 1:nrow(idigbio)){
     sp[i] <- c(strsplit(as.character(idigbio$species[[i]]), ",")[[1]][1])
   }
-
-  for (i in 1:100){#nrow(idigbio))
-    classes[i] <- c(classification(sp[i], db = "gbif", rows = 1)[[1]][[1]][3])
+  
+  c <- makeCluster(detectCores()-1)
+  
+  # Resolving sci. names
+  # Data Sources IDs:
+  # 173 = The Reptile Database
+  # 3 = ITIS
+  # 4 = NCBI
+  # 11 = GBIF
+  # 174 = Mammal Species of the World
+  # 175 = BirdLife International
+  
+  idb_spnames<-parLapply(c, sp, gnr_resolve ,data_source_ids=c(173,3,4,11,174,175),
+                         resolve_once=FALSE,
+                         with_context=FALSE,canonical=FALSE,highestscore=TRUE,
+                         best_match_only=TRUE,http="post",splitby=50,cap_first=TRUE,
+                         fields = "minimal")
+  
+#TODO  # Get valid names 
+#NOTE 20191112 - saved idigbio and idb_spnames in 'data/raw/idigbio.Rdata'. Load it next time.
+##= NOT WORKING
+  sp.val <- vector()
+  unresolved <- vector()
+  for (i in 1:length(idb_spnames)){
+    if (length(idb_spnames[i][[1]]>0)){
+      sp.val[i] <- idb_spnames[[i]]$matched_name
+    } else {
+      #if (length(attr(idb_spnames[i][[1]], "not_known"))>0) {
+      unresolved[i] <-  attr(idb_spnames[i][[1]], "not_known")
+      # } else {
+      #   unresolved[i] <- NA
+      # }
+    }
   }
+##= NOT WORKING  
+  
+  # Getting classes of species
+  t <- parLapply(c, idb_spnames,
+          classification, db="gbif", rows=1)
+  
+  for (i in 1:end(sp)){
+    classes[i] <- filter(t[[i]][[1]], rank=="class")[,1]
+  }
+  
   
   idigbio$class <- classes # replace class column with new variable
   
-  classes_list <- split.data.frame(idigbio, idigbio$class) #split df into classes
+  idigbio_classes <- split(idigbio, idigbio$class) #split df into classes
   
   #TODO merge each element of the previous list with its corresponding data
   
