--- a/manuscript/sources/installed-r-packages.bib
+++ b/manuscript/sources/installed-r-packages.bib
@@ -95,12 +95,72 @@
   url = {https://github.com/tidyverse/googlesheets4},
 }
 
+@Article{CoordinateCleaner,
+  title = {CoordinateCleaner: standardized cleaning of occurrence records from biological collection databases},
+  author = {Alexander Zizka and Daniele Silvestro and Tobias Andermann and Josue Azevedo and Camila {Duarte Ritter} and Daniel Edler and Harith Farooq and Andrei Herdean and Maria Ariza and Ruud Scharn and Sten Svanteson and Niklas Wengstrom and Vera Zizka and Alexandre Antonelli},
+  journal = {Methods in Ecology and Evolution},
+  number = {0},
+  pages = {0},
+  year = {2019},
+  note = {R package version 2.0-11},
+  doi = {10.1111/2041-210X.13152},
+  url = {https://github.com/ropensci/CoordinateCleaner},
+}
+
 @Manual{curl,
   title = {curl: A Modern and Flexible Web Client for R},
   author = {Jeroen Ooms},
   year = {2019},
   note = {R package version 4.2},
   url = {https://CRAN.R-project.org/package=curl},
+}
+
+@Manual{dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2019},
+  note = {R package version 0.8.3},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{doParallel,
+  title = {doParallel: Foreach Parallel Adaptor for the 'parallel' Package},
+  author = {Microsoft Corporation and Steve Weston},
+  year = {2019},
+  note = {R package version 1.0.15},
+  url = {https://CRAN.R-project.org/package=doParallel},
+}
+
+@Manual{fs,
+  title = {fs: Cross-Platform File System Operations Based on 'libuv'},
+  author = {Jim Hester and Hadley Wickham},
+  year = {2019},
+  note = {R package version 1.3.1},
+  url = {https://CRAN.R-project.org/package=fs},
+}
+
+@Manual{future,
+  title = {future: Unified Parallel and Distributed Processing in R for Everyone},
+  author = {Henrik Bengtsson},
+  year = {2019},
+  note = {R package version 1.15.0},
+  url = {https://CRAN.R-project.org/package=future},
+}
+
+@Manual{furrr,
+  title = {furrr: Apply Mapping Functions in Parallel using Futures},
+  author = {Davis Vaughan and Matt Dancho},
+  year = {2018},
+  note = {R package version 0.1.0},
+  url = {https://CRAN.R-project.org/package=furrr},
+}
+
+@Manual{here,
+  title = {here: A Simpler Way to Find Your Files},
+  author = {Kirill Müller},
+  year = {2017},
+  note = {R package version 0.1},
+  url = {https://CRAN.R-project.org/package=here},
 }
 
 @Manual{rgbif1,
@@ -128,12 +188,29 @@
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
-@Manual{dplyr,
-  title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+@Manual{parallel,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
   year = {2019},
-  note = {R package version 0.8.3},
-  url = {https://CRAN.R-project.org/package=dplyr},
+  url = {https://www.R-project.org/},
+}
+
+@Article{taxize1,
+  title = {taxize - taxonomic search and retrieval in R},
+  journal = {F1000Research},
+  author = {{Scott Chamberlain} and {Eduard Szocs}},
+  year = {2013},
+  url = {http://f1000research.com/articles/2-191/v2},
+}
+
+@Manual{taxize2,
+  title = {taxize: Taxonomic information from around the web},
+  author = {Scott Chamberlain and Eduard Szoecs and Zachary Foster and Zebulun Arendsee and Carl Boettiger and Karthik Ram and Ignasi Bartomeus and John Baumgartner and James O'Donnell and Jari Oksanen and Bastian Greshake Tzovaras and Philippe Marchand and Vinh Tran and Maëlle Salmon and Gaopeng Li and Matthias Grenié},
+  year = {2019},
+  note = {R package version 0.9.9},
+  url = {https://github.com/ropensci/taxize},
 }
 
 @Manual{tidylog,
@@ -144,71 +221,10 @@
   url = {https://CRAN.R-project.org/package=tidylog},
 }
 
-@Manual{fs,
-  title = {fs: Cross-Platform File System Operations Based on 'libuv'},
-  author = {Jim Hester and Hadley Wickham},
-  year = {2019},
-  note = {R package version 1.3.1},
-  url = {https://CRAN.R-project.org/package=fs},
-}
-
 @Manual{vroom,
   title = {vroom: Read and Write Rectangular Text Data Quickly},
   author = {Jim Hester and Hadley Wickham},
   year = {2019},
   note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=vroom},
-}
-
-@Manual{here,
-  title = {here: A Simpler Way to Find Your Files},
-  author = {Kirill Müller},
-  year = {2017},
-  note = {R package version 0.1},
-  url = {https://CRAN.R-project.org/package=here},
-}
-
-@Article{CoordinateCleaner,
-  title = {CoordinateCleaner: standardized cleaning of occurrence records from biological collection databases},
-  author = {Alexander Zizka and Daniele Silvestro and Tobias Andermann and Josue Azevedo and Camila {Duarte Ritter} and Daniel Edler and Harith Farooq and Andrei Herdean and Maria Ariza and Ruud Scharn and Sten Svanteson and Niklas Wengstrom and Vera Zizka and Alexandre Antonelli},
-  journal = {Methods in Ecology and Evolution},
-  number = {0},
-  pages = {0},
-  year = {2019},
-  note = {R package version 2.0-11},
-  doi = {10.1111/2041-210X.13152},
-  url = {https://github.com/ropensci/CoordinateCleaner},
-}
-
-@Manual{future,
-  title = {future: Unified Parallel and Distributed Processing in R for Everyone},
-  author = {Henrik Bengtsson},
-  year = {2019},
-  note = {R package version 1.15.0},
-  url = {https://CRAN.R-project.org/package=future},
-}
-
-@Manual{furrr,
-  title = {furrr: Apply Mapping Functions in Parallel using Futures},
-  author = {Davis Vaughan and Matt Dancho},
-  year = {2018},
-  note = {R package version 0.1.0},
-  url = {https://CRAN.R-project.org/package=furrr},
-}
-
-@Manual{parallel,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2019},
-  url = {https://www.R-project.org/},
-}
-
-@Manual{doParallel,
-  title = {doParallel: Foreach Parallel Adaptor for the 'parallel' Package},
-  author = {Microsoft Corporation and Steve Weston},
-  year = {2019},
-  note = {R package version 1.0.15},
-  url = {https://CRAN.R-project.org/package=doParallel},
 }
