--- a/main-script.Rmd
+++ b/main-script.Rmd
@@ -135,7 +135,7 @@ if(file.exists("data/data.Rdata")){
   load("data/data.Rdata")
 } else {
 
-  gbif<-rgbif::occ_download_import(occ_download_get("0023533-180131172636756", path = "data/raw"), quote = "")
+  gbif<-rgbif::occ_download_import(occ_download_get("0023533-180131172636756", path = "data/raw", overwrite = TRUE), quote = "")
   
   # filenumbers <- 1:length(datasource$url)
   # filenames <- paste0("data/raw/file", filenumbers, ".zip")
@@ -306,6 +306,12 @@ idigbio <- idigbio %>%
   
   
   #TODO merge each element of the previous list with its corresponding data
+  aves <- rbind(ave, Aves[2:4])
+  amp <- rbind(amp, Amphibia[2:4])
+  mam <- rbind(mam, Mammalia[2:4])
+  rep <- Reptilia
+  rm(ave, Aves, Amphibia, Mammalia, Reptilia)
+
   
 ## GBIF
 # gbif <-
