--- a/manuscript/sources/installed-r-packages.bib
+++ b/manuscript/sources/installed-r-packages.bib
@@ -197,6 +197,14 @@
   url = {https://www.R-project.org/},
 }
 
+@Manual{purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2019},
+  note = {R package version 0.3.2},
+  url = {https://CRAN.R-project.org/package=purrr},
+}
+
 @Article{taxize1,
   title = {taxize - taxonomic search and retrieval in R},
   journal = {F1000Research},
